<resources>
    <string name="app_name">Transforming Parking</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_web_client_id">816216769608-eq92hjdfajbqkbn444jfvp123dgm80m5.apps.googleusercontent.com</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_home">Home</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="submit">Submit</string>
    <string name="additional_info">Additional info</string>
    <string name="eg_phone_number_123456789">Eg. Phone number: +123456789</string>
    <string name="price_per_hour_amd">Price per hour (AMD)</string>
    <string name="add_parking">Add parking</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="sign_in_up_with_google">Sign In/Up with Google</string>
    <string name="directions">Directions</string>
    <string name="title_activity_respond_request">RespondRequestActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Checkout activity -->
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="checkout_item_description">Description</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is
        not available on this phone.
    </string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for
        %s!
    </string>
    <string name="price_with2points">"Price: "</string>
    <string name="amd_per_hour">" AMD/hour"</string>
    <string name="google_maps_app_is_not_installed">Google Maps app is not installed</string>
    <string name="invalid_verification_code">Invalid Verification Code</string>
    <string name="authentication_failed">"Authentication failed: "</string>
    <string name="this_field_should_contain_only_letters">This field should contain only letters</string>
    <string name="invalid_phone_number">Invalid phone number.</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="this_field_can_t_be_empty">This field can\'t be empty</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="this_number_is_already_used_in_another_account">This number is already used in another account</string>
    <string name="delete_account">Delete Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="amd">AMD</string>
    <string name="to_exit_the_garage_parking_spot_scan_the_qr_code_again_a_payment_window_will_then_open_once_payment_is_completed_the_device_will_open_the_entry">To exit the garage/parking spot, scan the QR code again. A payment window will then open. Once payment is completed, the device will open the entry.</string>
    <string name="default_notification_channel_id">your_channel_id</string>
    <string name="you_don_t_have_any_notifications_yet">You don\'t have any notifications yet</string>
    <string name="idram_id">Idram ID</string>
    <string name="name">Name</string>
    <string name="idram_details">Idram details</string>
    <string name="please_be_careful_while_writing_idram_id_and_name">Please be careful while writing idram ID and name</string>
    <string name="name_lastname">Name Lastname</string>
    <string name="_123456789">123456789</string>
    <string name="write_your_9_digit_id">Write your 9 digit ID</string>
    <string name="write_your_name_as_it_is_written_in_your_idram_account">Write your name as it is written in your Idram account</string>
    <string name="delete">Delete</string>
    <string name="rate_the_garage">Rate the Garage</string>
    <string name="your_feedback">Your feedback</string>
    <string name="ratings_amp_reviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="show_reviews">Show reviews</string>
    <string name="hide_reviews">Hide reviews</string>
    <string name="no_description_about_this_garage">No description about this garage</string>
    <string name="there_are_no_reviews_for_this_garage">There are no reviews for this garage</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
</resources>