<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ParkingActivities.AddParkingActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="92dp"
                android:text="@string/price_per_hour_dram"
                android:textSize="18sp"
                android:textColor="@color/quantum_grey300"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pic" />

            <NumberPicker
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <ImageView
                android:id="@+id/pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/gallery_icon" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/additional_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginHorizontal="8dp"
                android:textColorHint="@color/quantum_grey600"
                android:textColor="@color/quantum_grey300"
                android:hint="@string/eg_phone_number_123456789"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/additional_info"
                android:textSize="20sp"
                android:textColor="@color/quantum_grey300"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price" />


            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="70dp"
                android:background="@drawable/submit_button_background"
                android:enabled="false"
                android:text="@string/submit"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewIdramNameErrMsg"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textViewBankCardDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="34dp"
                android:textColor="@color/white"
                android:text="@string/idram_details"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/additional_info" />

            <TextView
                android:id="@+id/textViewIdramId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="16dp"
                android:text="@string/idram_id"
                android:textColor="@color/quantum_grey300"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewWarning" />

            <EditText
                android:id="@+id/editTextNumberIdramId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:ems="9"
                android:hint="@string/_123456789"
                android:textColorHint="@color/quantum_grey600"
                android:textColor="@color/quantum_grey300"
                android:maxLength="9"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="@+id/textViewIdramId"
                app:layout_constraintTop_toBottomOf="@+id/textViewIdramId" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                android:text="@string/name"
                android:textColor="@color/quantum_grey300"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewIdramIDErrMsg" />

            <EditText
                android:id="@+id/editTextIDramName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:ems="15"
                android:hint="@string/name_lastname"
                android:textColorHint="@color/quantum_grey600"
                android:textColor="@color/quantum_grey300"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="@+id/textViewName"
                app:layout_constraintTop_toBottomOf="@+id/textViewName" />

            <TextView
                android:id="@+id/textViewWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="14dp"
                android:textColor="@color/quantum_yellowA100"
                android:text="@string/please_be_careful_while_writing_idram_id_and_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewBankCardDetails" />

            <TextView
                android:id="@+id/textViewIdramIDErrMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/write_your_9_digit_id"
                android:visibility="gone"
                android:textColor="@color/quantum_googred"
                app:layout_constraintStart_toStartOf="@+id/editTextNumberIdramId"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumberIdramId" />

            <TextView
                android:id="@+id/textViewIdramNameErrMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/quantum_googred"
                android:text="@string/write_your_name_as_it_is_written_in_your_idram_account"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/editTextIDramName"
                app:layout_constraintTop_toBottomOf="@+id/editTextIDramName" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>